--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, inital-scale=1">
 	<title>Levi'S Website</title>
-	<link rel="stylesheet" type="text/css" href="style">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
